<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail1Activity"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="20dp"
                android:text="@string/please_enter_your_phone_number"/>

            <EditText
                android:id="@+id/et_PhoneNumber_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/enter_your_phonenumber"/>

            <Button
                android:id="@+id/btn_Call"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowRadius="50"
                android:text="@string/call_now" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>